Added JS, Refined layout

--- a/_includes/dashboard.html
+++ b/_includes/dashboard.html
@@ -16,8 +16,8 @@
             </section>
 
             <section class="data-block">
-                <p class="data-block-value">89</p>
-                <p class="data-block-unit">days until symposium</p>
+                <p class="data-block-value" id="countdown"></p>
+                <p class="data-block-unit">until symposium</p>
             </section>
             
             <section class="data-block">
