--- a/_includes/top-navigation.html
+++ b/_includes/top-navigation.html
@@ -1,15 +1,23 @@
-<nav>
+<!-- logo --> 
+
+
+    <nav>
+        
+        <div id="site-logo-container"><a class="site-logo" href="{{ site.url }}">*</a></div>
+
+        <h1 class="site-title"> Our Lives, Data-fied </h1>
+        
+        <div><a class="site-logo" href="{{ site.url }}"></a></div>
+
+
     
-    <!-- logo --> 
-    <div id="site-logo-container"><a class="site-logo" href="{{ site.url }}">*</a></div>
-    
-    <!--
+<!--
+        <div id="nav-link-div">
+            <a href="{{ site.url }}" class="nav-link">LOGS</a>
+            <a href="  " class="nav-link">INFO</a>
+        </div>
+-->
 
-    <div id="nav-link-div">
-        <a href="{{ site.url }}" class="nav-link">WORK</a>
-        <a href="  " class="nav-link">INFO</a>
-    </div>
 
-    -->
+    </nav>
 
-</nav>
