--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,10 @@
         <title>{{ page.title }}</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,400;0,700;1,400&family=EB+Garamond:ital@0;1&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
+    
+        {% include base.html %}
+        
+        <link href="{{base}}/assets/css/main.css" rel="stylesheet" />
+    
         <script src="{{ "/assets/index.js" | relative_url }}"></script>
 </head>
