Re-added blank front matter to scss

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
     
         {% include base.html %}
         
-        <link href="{{base}}/assets/css/main.css" rel="stylesheet" />
+        <link rel="stylesheet"  href="{{base}}/assets/css/main.css">
     
         <script src="{{ "/assets/index.js" | relative_url }}"></script>
 </head>
