--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,4 @@
-
+---
 /* Clears default settings http://meyerweb.com/eric/tools/css/reset/
 v2.0 | 20110126
 License: none (public domain)
@@ -55,7 +55,7 @@ table {
 }
 
 
-
+---
 
 
 /* @import "main"; */
