--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,9 +5,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,400;0,700;1,400&family=EB+Garamond:ital@0;1&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
     
-        {% include base.html %}
-        
-        <link rel="stylesheet"  href="{{base}}/assets/css/main.css">
     
-        <script src="{{ "/assets/index.js" | relative_url }}"></script>
+        <link rel="stylesheet"  href="{{ "/assets/css/main.css" | relative_url }}">
+    
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    
 </head>
