--- a/_includes/post-featured-image.html
+++ b/_includes/post-featured-image.html
@@ -1,1 +1,3 @@
-<img class="feat-img" src="{{ site.baseurl }}/assets/images/{{ include.image }}" alt="{{ include.alt | default: 'image representing a theme in this article' }}" />
+
+    <img class="feat-img" src="{{ site.baseurl }}/assets/images/{{ include.image }}" alt="{{ include.alt | default: 'image representing a theme in this article' }}" />
+    <figcaption class="feat-img-caption">{{ page.featured-image-caption }}</figcaption>
