--- a/_includes/top-navigation.html
+++ b/_includes/top-navigation.html
@@ -3,7 +3,7 @@
 
     <nav>
         
-        <div id="site-logo-container"><a class="site-logo" href="{{ site.url }}">*</a></div>
+        <div id="site-logo-container"><a class="site-logo" href="{{ site.baseurl }}">*</a></div>
 
         <h1 class="site-title"> Our Lives, Data-fied </h1>
         
