--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@
         
         <div id="content-wrapper">
         
-                <p class="subhead"> Process for degree project on data and self-discovery. Read the proposal here </p>
+                <p class="subhead"> Process for degree project on data, self-discovery and connections.</p>
 
                 {% include dashboard.html %}
 
