--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -45,12 +45,18 @@
             <div class="article-under-image">
                 
                 <section class="sidebar-info">
+                    <h3>Tasks</h3>
+                    <ul>
+                        <li>{{ page.list-item-1 }}</li>
+                        <li>{{ page.list-item-2 }}</li>
+                        <li>{{ page.list-item-3 }}</li>
+                        <li>{{ page.list-item-4 }}</li>
+                    </ul>
                 </section>
                 
                 <section class="article-content">
-                    <p class="project-description">{{ page.description-1 }}</p>
-
-                    <p class="project-  description-2">{{ page.description-2 }}</p>
+                    
+                    {{ content }}
                 
                 </section>
                 
@@ -61,7 +67,6 @@
             </div>
 
 
-    <!--        {{ content }}-->
         </div>
     
     </body>
