--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -58,12 +58,12 @@ table {
 ---
 
 /* SASS Variables */
-$primary-font: 'Archivo';
+$primary-font: 'Space Grotesk';
 $secondary-font: 'EB Garamond';
 $tertiary-font: 'Space Mono';
 
 $page-side-margin: 200px;
-
+$percent: 11%;
 
 
 /* @import "main"; */
@@ -108,6 +108,14 @@ a {
     color: #0D0630;
 }
 
+a.inline-link{
+    text-decoration: underline;
+}
+
+a.inline-link:hover{
+    text-decoration: underline;
+    color: #907AD6;
+}
 
 img{
     object-fit: cover;
@@ -261,7 +269,7 @@ div#progress-bar {
 
 .color {
     height: 100%;
-    width: 10%; /* Change progress % here */
+    width: $percent; /* Change progress % here */
     background: #907AD6;
     animation: 3s ease-out 0s 1 expand;
 }
@@ -374,10 +382,20 @@ h2.project-subhead{
 
 img.feat-img{
     margin-top: 24px;
-    margin-bottom: 36px;
+    margin-bottom: 6px;
     height: 360px;
+    width: 100%;
     
 }
+
+figcaption.feat-img-caption{
+    font-family: $secondary-font, serif;
+    font-size: 16px;
+    font-style: italic;
+    color: #3F3862;
+    margin-bottom: 36px;
+}
+
 
 div.article-under-image{
     display: grid;
@@ -389,11 +407,20 @@ section.article-content{
 }
 
 
-p.project-description{
+p.article-paragraph{
     font-family: $primary-font, sans-serif;
     font-size: 16px;
-    line-height: 20px;
+    line-height: 24px;
+    padding-bottom: 24px;
 }
+
+q.article-quote{
+    font-family: $primary-font, sans-serif;
+    font-size: 24px;
+    line-height: 30px;
+    margin-bottom: 36px;
+}
+
 
 
 @media only screen and (max-width: 992px) {   
