Added phase 2 research

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,11 +7,12 @@
         
         {% include top-navigation.html %}
         
-        <div id="content-wrapper">
+        <div class="content-wrapper">
         
-                <p class="subhead"> Process for degree project on data, self-discovery and connections.</p>
+                <p class="subhead"> Process for degree project on data, self-discovery and connections. <a class="squiggle" href="{% link info.md %}" class="">Read the project statement.</a></p>
 
                 {% include dashboard.html %}
+            
 
 
                 <div class="work">
