--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -7,10 +7,14 @@
         
         {% include top-navigation.html %}
         
-    </body>
     
-    <p>
+    
+        <div class="content-wrapper">
         {{ content }}
-    </p>
+        </div>
+        
+        {% include footer.html %}
+        
+    </body>
     
 </html>
