Fix proj statement link

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@
         
         <div class="content-wrapper">
         
-                <p class="subhead"> Process for degree project on data, self-discovery and connections. <a class="squiggle" href="{% link info.md %}" class="">Read the project statement.</a></p>
+                <p class="subhead"> Process for degree project on data, self-discovery and connections. <a class="squiggle" href="{{ site.baseurl }}{% link info.md %}" class="">Read the project statement.</a></p>
 
                 {% include dashboard.html %}
             
