--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,9 +19,9 @@
                     <h2>Logs</h2>
 
                     <div id="project-top-row">
-                                <p class="top-row-block">week</p>
+                                <p class="top-row-block">phase</p>
                                 <p class="top-row-block"></p>
-                                <p class="top-row-block">topic</p>
+                                <p class="top-row-block"></p>
                     </div>
 
                     {% for post in site.posts limit:10 %}
