--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -67,7 +67,7 @@ $secondary-color: #907AD6;
 
 $page-side-margin: 200px;
 $nav-side-margin: 50px;
-$percent: 45%;
+$percent: 90%;
 
 
 /* @import "main"; */
@@ -83,6 +83,8 @@ body{
     background-color: #F8F5FA;
     font-family: $primary-font, sans-serif;
     color: $primary-color;
+    font-size: 20px;
+    line-height: 32px;
     
 }
 
@@ -116,7 +118,8 @@ footer{
 
 p{
     margin: 0px;
-    line-height: 1.6em;
+    
+    
     
 }
 
@@ -243,6 +246,8 @@ nav{
 
 h2{
     margin: 0px;
+    font-size: 32px;
+    line-height: 40px;
 }
 
 ol{
@@ -339,7 +344,7 @@ div.work{
 
 div#project-top-row{
     display: grid;
-    grid-template-columns: 1fr 2fr 7fr;
+    grid-template-columns: 1fr 3fr 5fr;
     grid-gap: 30px;
     padding-top: 20px;
     padding-bottom: 10px;
@@ -355,11 +360,11 @@ p.top-row-block{
 
 article.project{
     display: grid;
-    grid-template-columns: 1fr 2fr 7fr;
+    grid-template-columns: 1fr 3fr 5fr;
     grid-gap: 30px;
     border-top: 1px solid #bbb;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 20px;
+    padding-bottom: 25px;
 }
 
 .proj-detail-block{
@@ -377,7 +382,7 @@ p.proj-week{
 
 p.proj-subhead{
     font-family: $secondary-font, serif;
-    line-height: 24px;
+    line-height: 30px;
 }
 
 
@@ -407,7 +412,7 @@ p.article-top-row-data{
 }
 
 img.thumbnail-feat-img{
-    height: 96px; 
+    height: 160px; 
     object-fit: cover;
 }
 
@@ -625,6 +630,47 @@ a.squiggle:hover {
     padding-left: 10px;
     padding-right: 10px;
     }
+    
+    /* Home Page > Project */
+    
+    div.work{
+    margin-top: 50px;
+    display: grid;
+    grid-template-rows: repeat(auto-fill, 1fr);
+    }
+
+    div#project-top-row{
+    display: grid;
+    /*grid-template-columns: 1fr 3fr;*/
+    grid-gap: 30px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    font-family: $secondary-font, serif;
+    font-style: italic;
+    
+    }
+
+    p.top-row-block{
+        margin: 0px;
+    }
+
+
+    article.project{
+        display: block;
+        border-top: 1px solid #bbb;
+        padding-top: 20px;
+        padding-bottom: 25px;
+    }
+    
+    p.proj-week{
+        padding-top: 20px;
+        padding-bottom: 12px;
+    }
+    
+    cap.proj-caption{
+        
+    }
+
         
 }
 
