Adjusted page layout

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -12,7 +12,7 @@
             <div id="project-article-top-row">
                 
                 <section>
-                    <p class=article-top-row-text>week</p>
+                    <p class=article-top-row-text>phase</p>
 
                     <p class="article-top-row-data">{{     page.week }}</p>  
                 </section>
@@ -44,11 +44,10 @@
             
             <div class="article-under-image">
                 
+                
                 <section class="sidebar-info">
-                    <h3>Summary</h3>
-                        <p>{{ page.summary }}</p>
-                    <h3>Tasks</h3>
-                    <ul>
+                    <h3>Outline</h3>
+                    <ul class="sidebar-info">
                         <li>{{ page.list-item-1 }}</li>
                         <li>{{ page.list-item-2 }}</li>
                         <li>{{ page.list-item-3 }}</li>
