--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
 
-    <p>Vicky Jiang * 2021 * Massachusetts College of Art and Design</p>
+    <p>Built by Vicky Jiang  *  2021  *  Massachusetts College of Art and Design</p>
 
 
 
